<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.manageMatchActivity">

    <Button
        android:id="@+id/startMatch_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/startMatch_Button"
        android:textColor="@color/textColour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/endMatch_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/endMatch_Button"
        android:textColor="@color/textColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/startMatch_Button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clickLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/customborder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endMatch_Button">

        <TextView
            android:id="@+id/team1_Score"
            android:layout_width="96dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/default_score"
            android:textAlignment="center"
            android:textColor="@color/sColorDark"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/score_Colon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1_name" />

        <TextView
            android:id="@+id/team2_Score"
            android:layout_width="96dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/default_score"
            android:textAlignment="center"
            android:textColor="@color/sColorDark"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/score_Colon"
            app:layout_constraintTop_toBottomOf="@+id/team2_name" />

        <TextView
            android:id="@+id/score_Colon"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:text="@string/colon"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/sColorDark"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/team2_Score"
            app:layout_constraintStart_toEndOf="@+id/team1_Score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001" />

        <TextView
            android:id="@+id/team1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_team1"
            android:textAlignment="center"
            android:textColor="@color/sColorDark"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_team2"
            android:textAlignment="center"
            android:textColor="@color/sColorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/team2_score_decrease"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/decreaseScore"
            android:textColor="@color/textColour"
            app:layout_constraintEnd_toStartOf="@+id/team2_score_increase"
            app:layout_constraintTop_toTopOf="@+id/team1_score_increase" />

        <Button
            android:id="@+id/team1_score_decrease"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/decreaseScore"
            android:textColor="@color/textColour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team1_Score" />

        <Button
            android:id="@+id/team1_score_increase"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/increaseScore"
            android:textColor="@color/textColour"
            app:layout_constraintStart_toEndOf="@+id/team1_score_decrease"
            app:layout_constraintTop_toTopOf="@+id/team1_score_decrease" />

        <Button
            android:id="@+id/team2_score_increase"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/increaseScore"
            android:textColor="@color/textColour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/team2_score_decrease" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="159dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/log_textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/log_submitButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        android:backgroundTint="@color/sColorDark"
        android:backgroundTintMode="src_atop"
        android:foregroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/log_textInput"
        app:layout_constraintTop_toTopOf="@+id/log_textInput" />

    <TextView
        android:id="@+id/noMatch_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_border_red"
        android:text="@string/noMatch"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/customborder"
        app:layout_constraintBottom_toTopOf="@+id/log_textInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>